--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "dev": "nodemon src/server.js", 
     "redis": "start \"redis server\" /MIN redis-server ./redis/conf/redis.conf"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "ioredis": "^5.4.1",
     "node-sql-parser": "^5.3.2"
   },
